| Bug #9213 | GROUP BY query on utf-8 key returns wrong results (empty set) | ||
|---|---|---|---|
| Submitted: | 16 Mar 2005 3:34 | Modified: | 11 Apr 2005 4:21 |
| Reporter: | Timothy Smith | ||
| Status: | Closed | ||
| Category: | Server: Optimizer | Severity: | S2 (Serious) |
| Version: | 4.1.11 | OS: | Any (any) |
| Assigned to: | Bugs System | Target Version: | |
[16 Mar 2005 3:34]
Timothy Smith
[16 Mar 2005 3:43]
Timothy Smith
tar zxf 4830.tar.gz; mv t.{MYI,MYD,frm} data/test; mysql test; ...
Attachment: 4830.tar.gz (application/gzip, text), 8.55 KiB.
[27 Mar 2005 19:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23404
[30 Mar 2005 12:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23469
[30 Mar 2005 12:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23470
[30 Mar 2005 13:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23473
[30 Mar 2005 13:58]
Sergey Petrunya
Fixed in 4.1.11.
[30 Mar 2005 14:10]
Sergey Petrunya
Note for the docs team: GROUP BY field1, field2 ... query may* return return wrong results if the first** table in the join has several indexes that cover field1, field2... (and the covered fields do not need to be in utf8 for this to happen) * depending on index statistics ** first wrt. explain output. The fix was pushed into 4.1.11 tree
[11 Apr 2005 4:21]
Paul DuBois
Noted in 4.1.11 changelog.
