Fix for BUG#9213: GROUP BY returns wrong query results: Make test_if_skip_sort_order() rebuild tab->ref if it decides to use an index different from the index join optimizer has choosen.

mysql-test/r/group_by.result:
  Testcase for BUG#9213
mysql-test/t/group_by.test:
  Testcase for BUG#9213
sql/table.h:
  Added comments about TABLE::used_keys